# Leader-Follower_Tracking

./: README.md  test_dev_li.txt
lft_control/: CMakeLists.txt  package.xml
lft_control/scripts/: lft_base.py
lft_simulation/: CMakeLists.txt  package.xml
lft_simulation/launch/: onni_lft_simulation.launch.py  onni_simulation.launch.py
lft_simulation/urdf/: simulation_3d_waking_robot.xacro  simulation_leader_waking_robot.xacro  simulation_slave_waking_robot.xacro
lft_simulation/urdf/plugins/: gazebo_sensor_plugin.xacro
