<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lft_simulation</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation package for the Leader-Follower_Tracking.
  </description>
  <maintainer email="18477558689@163.com">Gengming Liang</maintainer>
  <license>TODO</license>
  <author email="18477558689@163.com">Gengming Liang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>

  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
    <gazebo_ros gazebo_plugin_path="${prefix}/plugins"/> -->
    <gazebo_ros
      gazebo_model_path="${prefix}/meshes"
      gazebo_plugin_path="${prefix}/plugins"
    />
  </export>
</package>
